[tool.poetry]
name = "huntflow-py"
version = "0.1.1"
description = "Huntflow API library for Python"
authors = ["Kirill K <kovalev.kirill.a@gmail.com>"]
license = "WTFPL"
readme = "README.md"
repository = "https://github.com/agrrh/huntflow-py"

# Actually managed with requirements.txt
[tool.poetry.dependencies]
python = "^3.6"
email_validator = "^1.1.0"
requests = "^2.23.0"

# [tool.poetry.dev-dependencies]
# pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
